# acgs2

./: .auto-claude-status  .dev_modes.sh  .env.dev  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .kilocodemodes  .mypy.ini  .pre-commit-config.yaml  .secrets-allowlist.README.md  .secrets-allowlist.yaml  .secrets.baseline  .task-orchestration-plan.md  ACGS2_codebase_report_zh_acgs2-main-1.md  ACGS2_exec_one_pager_zh.md  ACGS2_exec_one_pager_zh_acgs2-main-1.md  ACGS2_ready_to_start_PR_plan_zh.md  ACGS2_ready_to_start_PR_plan_zh_acgs2-main-1.md  ACGS2_work_items.csv  ACGS2_work_items_acgs2-main-1.csv  AGENTS.md  BREAKTHROUGH_OPPORTUNITIES.md  CEOS_V1_DIRECTIVE.md  CLAUDE.md  CONSTITUTIONAL_COMPLIANCE_AUDIT_REPORT.md  CONTRIBUTING.md  CORE_CONSOLIDATION_REPORT.md  DEPENDENCY-AUDIT-REPORT.md  DEVOPS_REVIEW_INDEX.md  DIRECTORY_STRUCTURE.md  E2E_TEST_RESULTS.md  FINAL_ORCHESTRATION_REPORT.md  FRONTEND_VERIFICATION_CHECKLIST.md  FULL_TEST_SUITE_EXECUTION.md  HELP_PANEL_VERIFICATION.md  INTEGRATION_VALIDATION_REPORT.md  Makefile  (+80 more)
acgs2-core/enhanced_agent_bus/: COMPREHENSIVE_DOCUMENTATION_REVIEW.md  DOCUMENTATION_PORTAL.md  Dockerfile.dev  EXCEPTION_RECOVERY_MAPPING.md  INVESTIGATION.md  OPA_CLIENT_README.md  OPA_INTEGRATION_SUMMARY.md  ORCH-001-B-ANALYSIS.md  ORCHESTRATION_COMPLETION_REPORT.md  PERFORMANCE_ANALYSIS.md  PROJECT_INDEX.json  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_REGRESSION_REPORT.md  TEST_RESULTS_REPORT.md  __init__.py  ab_testing.py  adaptive_governance.py  adaptive_governance.py.old  agent_bus.py  api.py  audit_anchor_production.json  audit_client.py  bundle_registry.py  chaos_testing.py  clean_and_test.sh  config.py  conftest.py  constitutional_classifier.py  core.py  coverage.json  drift_monitoring.py  dx_ecosystem.py  exceptions.py  feedback_handler.py  graph_database.py  health_aggregator.py  health_aggregator_example.py  imports.py  interfaces.py  (+36 more)
acgs2-core/enhanced_agent_bus/C4-Documentation/: README.md  c4-code-acl-adapters.md  c4-code-core.md  c4-code-deliberation-layer.md  c4-component.md  c4-container.md
acgs2-core/enhanced_agent_bus/acl_adapters/: __init__.py  base.py  llm_assisted_z3_adapter.py  opa_adapter.py  registry.py  z3_adapter.py
acgs2-core/enhanced_agent_bus/adaptive_governance/: __init__.py  governance_engine.py  impact_scorer.py  models.py  threshold_manager.py
acgs2-core/enhanced_agent_bus/ai_assistant/: __init__.py  context.py  core.py  dialog.py  integration.py  mamba_hybrid_processor.py  nlu.py  response.py
acgs2-core/enhanced_agent_bus/benchmarks/: profile_onnx.py
acgs2-core/enhanced_agent_bus/components/: __init__.py  agent_registry_manager.py
acgs2-core/enhanced_agent_bus/context/: mamba_hybrid.py
acgs2-core/enhanced_agent_bus/data/: __init__.py  generate_baseline.py  setup_baseline.py
acgs2-core/enhanced_agent_bus/deliberation_layer/: __init__.py  adaptive_router.py  audit_signature.py  dashboard.py  deliberation_mocks.py  deliberation_queue.py  hitl_manager.py  impact_scorer.py  integration.py  intent_classifier.py  interfaces.py  llm_assistant.py  multi_approver.py  opa_guard.py  opa_guard_mixin.py  opa_guard_models.py  redis_election_store.py  redis_integration.py  simple_test.py  tensorrt_optimizer.py  test_deliberation.py  test_pillar3_4.py  timeout_checker.py  vote_collector.py  (+3 more)
adaptive-learning-engine/: Dockerfile.dev  pyproject.toml
adaptive-learning-engine/src/: config.py  main.py
adaptive-learning-engine/tests/: __init__.py
enhanced_agent_bus/: CHANGELOG.md  COMPREHENSIVE_REVIEW_REPORT.md  DOCUMENTATION_QUALITY_REPORT.md  HEALTH_AGGREGATOR_SUMMARY.md  README.md  RECOVERY_ORCHESTRATOR.md  TEST_COVERAGE_ANALYSIS.md  __init__.py  agent_bus.py  bundle_registry.py  core.py  core_legacy.py  core_rust.py  core_updated.py  exceptions.py  health_aggregator_example.py  interfaces.py  kafka_bus.py  message_processor.py  models.py  opa_client.py  policy_client.py  pyproject.toml  recovery_orchestrator.py  registry.py  validation_strategies.py  validators.py
enhanced_agent_bus/ai_assistant/: __init__.py  integration.py
enhanced_agent_bus/deliberation_layer/: Dockerfile  __init__.py  adaptive_router.py  dashboard.py  deliberation_mocks.py  deliberation_queue.py  hitl_manager.py  impact_scorer.py  integration.py  llm_assistant.py  multi_approver.py  opa_guard.py  opa_guard_models.py  redis_integration.py  simple_test.py  test_deliberation.py  test_pillar3_4.py
enhanced_agent_bus/docs/: API.md
enhanced_agent_bus/policies/: acgs_policies.rego  audit.rego  compliance.rego  multitenant.rego  ratelimit.rego  rbac.rego  timebased.rego
enhanced_agent_bus/rust/: Cargo.toml  Dockerfile
enhanced_agent_bus/tests/: __init__.py  conftest.py  test_adaptive_router_module.py  test_cellular_resilience.py  test_chaos_framework.py  test_constitutional_validation.py  test_core_actual.py  test_core_extended.py  test_deliberation_feedback.py  test_deliberation_queue_module.py  test_dependency_injection.py  test_e2e_workflows.py  test_exceptions.py  test_health_aggregator.py  test_health_aggregator_integration.py  test_integration_module.py  test_models_extended.py  test_opa_client.py  test_opa_guard.py  test_policy_client.py  test_policy_client_actual.py  test_pqc_validation.py  test_redis_integration.py  test_redis_registry.py  test_tenant_isolation.py
examples/04-end-to-end-governance-workflow/: compose.yaml  pyproject.toml  requirements.txt
integration-service/: .env.example  REDIS_VERIFICATION.md  REDIS_VERIFICATION_RESULTS.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_batch_tests.sh  test_redis_tracking.sh
integration-service/docs/: EXISTING_TESTS_VERIFICATION.md  JWT_CONFIGURATION.md  TEST_VERIFICATION_GUIDE.md  batch_metrics_verification.md  batch_processing_verification.md
integration-service/src/: __init__.py  config.py  main.py  types.py
integration-service/templates/: github-policy-check-workflow.yml
integration-service/tests/: __init__.py  conftest.py  test_linear_client.py  test_shared_import.py
sdk/python/: README.md  pyproject.toml
(+4280 files in other folders)
