[project]
name = "acgs2-root"
version = "2.2.0"
description = "ACGS-2 Root Project Configuration"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ruff>=0.7.1",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1",
    "coverage[toml]>=7.3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]
loadtest = [
    "locust>=2.20.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["venv", ".venv", "node_modules", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = [
    "B008",  # Do not perform function call in argument defaults (FastAPI Depends)
    "E501",  # Line too long (Handled by Black mostly)
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
# MyPy is configured per-package to avoid directory naming conflicts
# See individual package mypy.ini files for configuration

[tool.pytest.ini_options]
# NOTE: This configuration is for individual component testing only.
# For running all tests across components, use: ./scripts/run_all_tests.sh
# This avoids pytest configuration conflicts between root and component-specific configs.
addopts = "-q --maxfail=3 --cov --cov-report=term-missing --cov-report=html --cov-report=xml"
asyncio_mode = "auto"
markers = [
    "constitutional: marks tests as related to constitutional compliance",
    "integration: marks tests as integration tests requiring external services",
    "slow: marks tests as slow running",
    "governance: marks tests as critical governance path tests (90%+ coverage required)",
]
# Only run tests in the immediate directory to avoid conflicts
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [
    ".",
    "acgs2-core",
    "acgs2-core/enhanced_agent_bus"
]

[tool.coverage.run]
branch = true
source = ["acgs2-core", "acgs2-observability", "acgs2-research", "acgs2-infra", "acgs2-neural-mcp"]
omit = ["*/tests/*", "*/venv/*", ".venv/*", "*/node_modules/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "except ImportError:",
]
# Enforce 80% minimum coverage (spec 027)
fail_under = 80
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "node_modules", "__pycache__", "examples"]
skips = [
    "B101",  # assert_used - acceptable in tests
    "B104",  # hardcoded_bind_all_interfaces - needed for containerized services
    "B108",  # hardcoded_tmp_directory - acceptable for temporary file handling
    "B311",  # random - not security-critical in this context
]
