[project]
name = "acgs2-root"
version = "2.2.0"
description = "ACGS-2 Root Project Configuration"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ruff>=0.7.1",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1",
    "coverage[toml]>=7.3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",  # Required for CLI output formatting
    "fastapi>=0.127.0",  # CVE-2024-24762 security fix
    "uvicorn[standard]>=0.40.0",
    "httpx>=0.25.0",
    "pydantic>=2.12.0",
    "pyjwt>=2.8.0",  # JWT token handling for authentication
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["venv", ".venv", "node_modules", "build", "dist", ".worktrees"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = [
    "B008",  # Do not perform function call in argument defaults (FastAPI Depends)
    "E501",  # Line too long (Handled by Black mostly)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "shared", "services", "enhanced_agent_bus", "routes", "main", "app"]

[tool.ruff.lint.per-file-ignores]
"*/alembic/env.py" = ["I001"]
"alembic/env.py" = ["I001"]
"**/alembic/*.py" = ["I001"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
# MyPy is configured per-package to avoid directory naming conflicts
# See individual package mypy.ini files for configuration

[tool.pytest.ini_options]
# NOTE: This configuration is for individual component testing only.
# For running all tests across components, use: ./scripts/run_all_tests.sh
# This avoids pytest configuration conflicts between root and component-specific configs.
addopts = "-q --maxfail=3 --cov --cov-report=term-missing --cov-report=html --cov-report=xml"
asyncio_mode = "auto"
markers = [
    "constitutional: marks tests as related to constitutional compliance",
    "integration: marks tests as integration tests requiring external services",
    "slow: marks tests as slow running",
    "governance: marks tests as critical governance path tests (90%+ coverage required)",
]
# Only run tests in the immediate directory to avoid conflicts
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [
    ".",
    "src"
]

[tool.coverage.run]
# Migrated from acgs2-core/.coveragerc - Constitutional Hash: cdd01ef066bc6cf2
branch = true
parallel = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/node_modules/*",
    "*/migrations/*",
    "*/conftest.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "except ImportError:",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "node_modules", "__pycache__", "examples"]
skips = [
    "B101",  # assert_used - acceptable in tests
    "B104",  # hardcoded_bind_all_interfaces - needed for containerized services
    "B108",  # hardcoded_tmp_directory - acceptable for temporary file handling
    "B311",  # random - not security-critical in this context
]
