[project]
name = "integration-service"
version = "1.0.0"
description = "ACGS-2 Integration Service"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
# B008: Ignore function call in default argument - FastAPI standard pattern for Depends(), Query(), etc.
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
