# ACGS-2 Enhanced Agent Bus - Project Configuration
# Constitutional Hash: cdd01ef066bc6cf2

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-agent-bus"
version = "2.2.0"
description = "ACGS-2 Enhanced Agent Bus with Constitutional Compliance"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ACGS Team"}
]
dependencies = [
    "redis>=4.5.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "fakeredis>=2.18.0",
]

[tool.setuptools]
packages = [
    "enhanced_agent_bus",
    "enhanced_agent_bus.deliberation_layer",
]

[tool.setuptools.package-dir]
enhanced_agent_bus = "."

[tool.setuptools.package-data]
enhanced_agent_bus = ["policies/*.rego"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "asyncio: mark test as async",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "constitutional: marks tests for constitutional validation",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # Ignore coroutine warnings from mock objects in integration tests
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
    "ignore:coroutine 'MockComponent.__getattr__.<locals>.async_mock' was never awaited:RuntimeWarning",
]

[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*.pyc",
    "venv/*",
    ".venv/*",
    # Test directories in subdirectories
    "*/tests/*",
    "observability/tests/*",
    "specs/tests/*",
    "acl_adapters/tests/*",
    # Internal test/example files (not part of main package)
    "deliberation_layer/simple_test.py",
    "deliberation_layer/test_deliberation.py",
    "test_rust_integration.py",
    "validation_integration_example.py",
    # Setup files
    "setup.py",
    "conftest.py",
    "**/conftest.py",
    # Modules requiring unavailable external dependencies
    "deliberation_layer/dashboard.py",  # Requires streamlit
    "deliberation_layer/impact_scorer.py",  # Requires transformers
    "deliberation_layer/__init__.py",  # Requires transformers
    # Spec fixtures (not production code)
    "specs/*",
    "specs/**/*",
    # Example and standalone test files (not part of test suite)
    "test_diagnostic.py",
    "test_minimal.py",
    "test_rust_governance.py",
    "health_aggregator_example.py",
    # Other non-production code
    "sandbox.py",
    "dx_ecosystem.py",
    "retrieval_triad.py",
    "sql_agent.py",
    "graph_database.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
fail_under = 40
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
