# ACGS-2 Enhanced Agent Bus - Project Configuration
# Constitutional Hash: cdd01ef066bc6cf2

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-agent-bus"
version = "2.2.0"
description = "ACGS-2 Enhanced Agent Bus with Constitutional Compliance"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "ACGS Team"}
]
dependencies = [
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=4.0.0",
    "fakeredis>=2.18.0",
    "pyyaml>=6.0",
    "pybreaker>=1.0.0",
]
ml = [
    "numpy>=1.24.0",
]

[tool.setuptools]
packages = [
    "enhanced_agent_bus",
    "enhanced_agent_bus.deliberation_layer",
]

[tool.setuptools.package-dir]
enhanced_agent_bus = "."

[tool.setuptools.package-data]
enhanced_agent_bus = ["policies/*.rego"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "asyncio: mark test as async",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "constitutional: marks tests for constitutional validation",
    "benchmark: marks performance benchmark tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # Ignore coroutine warnings from mock objects in integration tests
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
    "ignore:coroutine 'MockComponent.__getattr__.<locals>.async_mock' was never awaited:RuntimeWarning",
]

[tool.coverage.run]
# Source directory for coverage collection
source = ["."]
branch = true
# Ensure coverage finds modules even when run from different directories
relative_files = true
# Dynamically find source based on current directory
dynamic_context = "test_function"
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*.pyc",
    "venv/*",
    ".venv/*",
    # Test directories in subdirectories
    "*/tests/*",
    "observability/tests/*",
    "specs/tests/*",
    "acl_adapters/tests/*",
    # Internal test/example files (not part of main package)
    "deliberation_layer/simple_test.py",
    "deliberation_layer/test_deliberation.py",
    "test_rust_integration.py",
    "validation_integration_example.py",
    # Setup files
    "setup.py",
    "conftest.py",
    "**/conftest.py",
    # Modules requiring unavailable external dependencies
    "deliberation_layer/dashboard.py",  # Requires streamlit
    "deliberation_layer/impact_scorer.py",  # Requires transformers
    "deliberation_layer/__init__.py",  # Requires transformers
    # Spec fixtures (not production code)
    "specs/*",
    "specs/**/*",
    # Example and standalone test files (not part of test suite)
    "test_diagnostic.py",
    "test_minimal.py",
    "test_rust_governance.py",
    "health_aggregator_example.py",
    # Other non-production code
    "sandbox.py",
    "dx_ecosystem.py",
    "retrieval_triad.py",
    "sql_agent.py",
    "graph_database.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
fail_under = 40
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "B", "I"]
lint.ignore = [
    "E501",   # line too long, handled by black
    "E402",   # module level import not at top - intentional for try/except fallback patterns
    "F403",   # star imports - intentional for re-export modules
]

[tool.ruff.lint.per-file-ignores]
# Re-export modules intentionally import for external use
"__init__.py" = ["F401"]
# Main module files with intentional re-exports and fallback imports
"agent_bus.py" = ["F401", "F405"]
"core.py" = ["F401", "F405"]
"registry.py" = ["F401"]
"maci_enforcement.py" = ["F401"]
"opa_client.py" = ["F401"]
"message_processor.py" = ["F401"]
"validators.py" = ["F401"]
"validation_strategies.py" = ["F401"]
"models.py" = ["F401"]
"chaos_testing.py" = ["F401"]
# Deliberation layer modules with complex import fallbacks
"deliberation_layer/*.py" = ["F401", "F405"]
# Observability modules
"observability/*.py" = ["F401"]
# AI assistant integration
"ai_assistant/*.py" = ["F401"]
# Test files may have unused variables for fixture creation
"tests/*" = ["F841", "F401"]
"*/tests/*" = ["F841", "F401"]
"**/test_*.py" = ["F841", "F401"]
"**/*_test.py" = ["F841", "F401"]
# Example files demonstrate patterns without using all variables
"examples/*" = ["F841"]
# Spec fixtures are test infrastructure
"specs/*" = ["F841"]
"specs/**/*" = ["F841"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "tests"]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
no_implicit_optional = false
