[package]
name = "enhanced_agent_bus_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "enhanced_agent_bus_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.18"
ort = "2.0.0-rc.10"
tokenizers = "0.13"
atomic_float = "0.1"
moka = { version = "0.12", features = ["future"] }
