# ACGS-2 Python SDK
# Constitutional Hash: cdd01ef066bc6cf2

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acgs2-sdk"
version = "2.0.0"
description = "ACGS-2 Python SDK for AI Constitutional Governance"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "ACGS Team", email = "sdk@acgs.io" }
]
keywords = [
    "acgs",
    "ai-governance",
    "constitutional-ai",
    "policy-management",
    "multi-agent",
    "compliance"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://acgs.io"
Documentation = "https://docs.acgs.io/sdk/python"
Repository = "https://github.com/acgs/acgs2"
Changelog = "https://github.com/acgs/acgs2/blob/main/sdk/python/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/acgs2_sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["acgs2_sdk"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=acgs2_sdk --cov-report=term-missing"

[tool.coverage.run]
source = ["acgs2_sdk"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
