[package]
name = "enhanced_agent_bus_rust"
version = "0.2.0"
edition = "2021"

[lib]
name = "enhanced_agent_bus_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.0", features = ["extension-module", "abi3-py38", "serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
zkp = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
atomic_float = "0.1"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"

[dependencies.ort]
version = "1.20.0"
features = ["cuda"]  # or "tensorrt" if using GPU

[dependencies.tokenizers]
version = "0.19"
features = ["onig"]

[dev-dependencies]
criterion = "0.5"
