[package]
name = "acgs2-perf"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust extensions for ACGS2 hot paths via PyO3"
authors = ["ACGS2 Team"]
license = "MIT"

[lib]
name = "acgs2_perf"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.0", features = ["extension-module", "abi3-py38"] }
ndarray = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
