[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "acgs2-perf"
version = "0.1.0"
description = "High-performance Rust extensions for ACGS2 hot paths via PyO3"
authors = [{ name = "ACGS2 Team" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[tool.maturin]
# Python module name (matches lib.name in Cargo.toml)
module-name = "acgs2_perf"

# Build with release optimizations by default
profile = "release"

# Use abi3 for Python 3.8+ compatibility
# python-source = "python"

# Build features
features = ["pyo3/extension-module", "pyo3/abi3-py38"]

# Strip symbols for smaller binary
strip = true

# Generate compatible wheel for Linux
compatibility = "linux"
