[package]
name = "enhanced_agent_bus_rust"
version = "0.2.0"
edition = "2021"

[lib]
name = "enhanced_agent_bus_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.0", features = ["extension-module", "abi3-py38", "serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
zkp = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
atomic_float = "0.1"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"

[dependencies.ort]
version = "2.0.0-rc.10"
optional = true
# Note: cuda feature removed for CI compatibility - enable locally for GPU acceleration

[dependencies.tokenizers]
version = "0.19"
features = ["onig"]

[dev-dependencies]
criterion = "0.5"
